<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a"
    tools:context=".RideDetailsActivity">

    <Button
        android:id="@+id/busRide3"
        android:layout_width="222dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        android:background="@color/colorPrimary"
        android:text="@string/start_ride"
        android:textAllCaps="?android:attr/windowOverscan"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="22sp"
        tools:text="Start Ride" />

    <android.support.v7.widget.CardView
        android:layout_width="340dp"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="120sp"
            android:text="Driver Name:"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginEnd="60sp"
            android:layout_marginTop="40sp"
            android:text="@string/ride_details"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="180sp"
            android:fontFamily="@font/roboto"
            android:text="@string/location"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="240sp"
            android:text="@string/destination"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="300sp"
            android:text="@string/fare"
            android:textSize="22sp" />

    </android.support.v7.widget.CardView>
</RelativeLayout>