<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a"
    android:visibility="visible"
    tools:context=".RideRequestDetailsActivity">

    <android.support.v7.widget.CardView
        android:layout_width="380dp"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="60sp"
            android:text="@string/ride_details"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:text="Ride Request " />

        <Spinner
            android:id="@+id/locationSpinner"
            android:layout_width="258dp"
            android:layout_height="37dp"
            android:layout_alignBottom="@+id/nameD"
            android:layout_alignEnd="@+id/destinationSpinner"
            android:layout_marginStart="120dp"
            android:layout_marginTop="180dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="180sp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/location"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/destinationSpinner"
            android:layout_width="225dp"
            android:layout_height="36dp"
            android:layout_alignBottom="@+id/pickupTimeText"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="240dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="240sp"
            android:text="@string/destination"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/pickUpTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="300sp"
            android:text="@string/fare"
            android:textSize="22sp"
            tools:text="PicupTime:" />

        <TextView
            android:id="@+id/pickDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="400dp"
            android:text="Date :"
            android:textSize="22sp" />

        <Button
            android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220sp"
            android:layout_marginTop="400sp"
            android:background="@drawable/roundedbutton"
            android:onClick="onClick"
            android:text="Pick Date"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/pickTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220sp"
            android:layout_marginTop="300sp"
            android:background="@drawable/roundedbutton"
            android:onClick="onClick"
            android:text="Time"
            android:textColor="@color/white" />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="222dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:background="@drawable/roundedbutton"
        android:text="Send Request"
        android:textAllCaps="?android:attr/windowOverscan"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="22sp"
        tools:text="Send Request" />


</RelativeLayout>